# DigitalCurling

./: .gitignore  .gitmodules  CMakeLists.txt  DCP.md  Dockerfile  README.md  config.json  docker.sh
.github/workflows/: build_and_push.yml
DigitalCurling/: DigitalCurling.sln
DigitalCurling/SampleAI/: SampleAI.vcxproj  main.cpp
DigitalCurling/Server/: Server.vcxproj  Server.vcxproj.filters  config.txt  dc_util.cpp  dc_util.h  game_log.cpp  game_log.h  game_player.cpp  game_player.h  game_process.cpp  game_process.h  main.cpp
DigitalCurling/Simulator/: Simulator.vcxproj  Simulator.vcxproj.filters  dcurling_simulator.cpp  dcurling_simulator.h  dcurling_simulator_constructors.cpp  main.cpp  trajectory_log.txt
Simulator/: Simulator.sln
Simulator/Simulator/: Simulator.vcxproj
apps/client_sample/: CMakeLists.txt
apps/server/: CMakeLists.txt  log.cpp  log.hpp  main.cpp  server.cpp  server.hpp
include/digital_curling/: digital_curling.hpp
include/digital_curling/detail/: common.hpp  version.hpp
include/digital_curling/detail/normal_game/: normal_game.hpp
include/digital_curling/detail/simulation/: fcv1.hpp  simple1.hpp  simulator.hpp
server/: CMakeLists.txt  main.cpp  server.cpp
src/: CMakeLists.txt  box2d_util.hpp  common.cpp  normal_game.cpp  simulator.cpp  simulator_fcv1.cpp  simulator_fcv1.hpp  simulator_simple1.cpp  simulator_simple1.hpp
tests/: CMakeLists.txt
tests/test/: test_simulator.cpp  util.cpp  util.hpp
